<resources>
    <string name="app_name">MADDLDSDJ</string>
    <string name="text_email">Email</string>
    <string name="text_password">Password</string>
    <string name="button_signin">Sign In</string>
    <string name="button_register">Register</string>
    <string name="text_register">Create a user account by filling out the form above and pressing Register</string>
    <string name="button_signOut">Sign Out</string>
    <string name="button_view_catalog">View Catalog</string>
    <string name="button_view_playlist">View Playlist</string>
    <string name="button_upvote">Vote up</string>
    <string name="button_downvote">Vote down</string>
    <string name="button_remove_playlist">Remove from playlist</string>
    <string name="text_votes">Votes</string>
    <string name="request_song_approval">Request Song Approval</string>
    <string name="view_playlist">View Playlist</string>
    <string name="buttonViewPlaylistLog">Changing view to play list</string>
    <string name="add_to_playlist">Add to Playlist</string>
    <string name="appears_on">Appears On</string>
    <string name="song_album">Song Album</string>
    <string name="song_artist">Song Artist</string>
    <string name="song_title">Song Title</string>
    <string name="return_to_catalog">Return to Catalog</string>
    <string name="submit_request">Submit Request</string>
    <string name="album">Album</string>
    <string name="artist">Artist</string>
    <string name="enter_the_song_album">Enter the Song Album</string>
    <string name="enter_the_song_artist">Enter the Song Artist</string>
    <string name="enter_the_song_title">Enter the Song Title</string>
    <string name="genre">Genre</string>
    <string name="title">Title</string>
    <string name="return_to_catalog_from_song">Return to Catalog</string>
    <string-array name="genre_array">
        <item>Rock</item>
        <item>Pop</item>
        <item>Country</item>
        <item>Reggae</item>
        <item>HipHop</item>
        <item>R&amp;B</item>
        <item>Showtunes</item>
        <item>Other</item>
    </string-array>
    <string name="signin_name">Sign In / Register</string>
    <string name="catalog_name">Approved Catalog</string>
    <string name="song_name">Song Details</string>
    <string name="playlist_name">DJ Playlist</string>
    <string name="request_name">Request Song</string>
    <string name="view_pending_approvals">View Pending Approvals</string>
    <string name="return_to_catalog_from_Pending_Approval">Return to Catalog</string>
    <string name="return_to_pending">Return to Pending</string>
    <string name="album_pending">Album</string>
    <string name="approve">Approve</string>
    <string name="artist_pending">Artist</string>
    <string name="genre_pending">Genre</string>
    <string name="reject">Reject</string>
    <string name="title_pending">Title</string>
    <string name="title_pending_submission">title</string>
    <string name="album_pending_submission">album</string>
    <string name="artist_pending_submission">artist</string>
    <string name="genre_pending_submission">genre</string>
    <string name="menu_sign_out">Sign Out</string>
    <string name="pending_approval">Pending Approval</string>
</resources>
