<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="edu.byui.maddldsdj.PendingSongDetailActivity">

    <TextView
        android:id="@+id/textView_submission_title"
        android:layout_width="280dp"
        android:layout_height="wrap_content"
        android:layout_marginEnd="16dp"
        android:layout_marginRight="16dp"
        android:text="@string/title_pending_submission"
        android:textSize="18sp"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintBaseline_toBaselineOf="@+id/textView_label_title" />

    <TextView
        android:id="@+id/textView_submssion_artist"
        android:layout_width="280dp"
        android:layout_height="wrap_content"
        android:layout_marginEnd="16dp"
        android:layout_marginRight="16dp"
        android:text="@string/artist_pending_submission"
        android:textSize="18sp"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintBaseline_toBaselineOf="@+id/textView_label_artist" />

    <TextView
        android:id="@+id/textView_submission_album"
        android:layout_width="280dp"
        android:layout_height="wrap_content"
        android:layout_marginEnd="16dp"
        android:layout_marginRight="16dp"
        android:text="@string/album_pending_submission"
        android:textSize="18sp"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintBaseline_toBaselineOf="@+id/textView_label_album" />

    <TextView
        android:id="@+id/textView_submission_genre"
        android:layout_width="280dp"
        android:layout_height="wrap_content"
        android:layout_marginEnd="16dp"
        android:layout_marginRight="16dp"
        android:text="@string/genre_pending_submission"
        android:textSize="18sp"
        app:layout_constraintBaseline_toBaselineOf="@+id/textView_label_genre"
        app:layout_constraintRight_toRightOf="parent" />

    <Button
        android:id="@+id/button_approve_request"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/approve"
        android:textSize="14sp"
        android:layout_marginStart="16dp"
        android:layout_marginLeft="16dp"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintBaseline_toBaselineOf="@+id/button_return_to_pending"
        app:layout_constraintRight_toLeftOf="@+id/button_return_to_pending"
        android:layout_marginEnd="16dp"
        android:layout_marginRight="16dp" />

    <Button
        android:id="@+id/button_reject_request"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/reject"
        android:textSize="14sp"
        android:layout_marginEnd="16dp"
        android:layout_marginRight="16dp"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintBaseline_toBaselineOf="@+id/button_return_to_pending"
        app:layout_constraintLeft_toRightOf="@+id/button_return_to_pending"
        android:layout_marginStart="16dp"
        android:layout_marginLeft="16dp" />

    <Button
        android:id="@+id/button_return_to_pending"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="24dp"
        android:text="@string/return_to_pending"
        android:textSize="14sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintLeft_toRightOf="@id/button_approve_request"
        app:layout_constraintRight_toLeftOf="@id/button_reject_request"
        tools:layout_editor_absoluteX="112dp" />

    <TextView
        android:id="@+id/textView_label_title"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginLeft="16dp"
        android:layout_marginTop="16dp"
        android:text="@string/title_pending"
        android:textSize="18sp"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/textView_label_artist"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginLeft="16dp"
        android:layout_marginTop="16dp"
        android:text="@string/artist_pending"
        android:textSize="18sp"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView_label_title" />

    <TextView
        android:id="@+id/textView_label_album"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/album_pending"
        android:textSize="18sp"
        android:layout_marginTop="16dp"
        app:layout_constraintTop_toBottomOf="@+id/textView_label_artist"
        android:layout_marginStart="16dp"
        android:layout_marginLeft="16dp"
        app:layout_constraintLeft_toLeftOf="parent" />

    <TextView
        android:id="@+id/textView_label_genre"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/genre_pending"
        android:textSize="18sp"
        android:layout_marginStart="16dp"
        android:layout_marginLeft="16dp"
        app:layout_constraintLeft_toLeftOf="parent"
        android:layout_marginTop="16dp"
        app:layout_constraintTop_toBottomOf="@+id/textView_label_album" />
</android.support.constraint.ConstraintLayout>
