<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="edu.byui.maddldsdj.RequestSubmission">

    <Button
        android:id="@+id/button_Submit_Request"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="8dp"
        android:layout_marginLeft="8dp"
        android:layout_marginRight="8dp"
        android:text="@string/submit_request"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintLeft_toRightOf="@+id/button_Return_To_Catalog"
        app:layout_constraintRight_toRightOf="parent" />

    <Button
        android:id="@+id/button_Return_To_Catalog_from_song"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="6dp"
        android:layout_marginLeft="8dp"
        android:layout_marginRight="8dp"
        android:text="@string/return_to_catalog"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toLeftOf="@+id/button_Submit_Request" />

    <TextView
        android:id="@+id/textViewRequestTitle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginLeft="16dp"
        android:layout_marginEnd="8dp"
        android:layout_marginRight="8dp"
        android:text="@string/title"
        android:textSize="24sp"
        app:layout_constraintBaseline_toBaselineOf="@+id/editTextEnterTitle"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toLeftOf="@+id/editTextEnterTitle" />

    <TextView
        android:id="@+id/textViewRequestArtist"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginLeft="16dp"
        android:layout_marginEnd="8dp"
        android:layout_marginRight="8dp"
        android:text="@string/artist"
        android:textSize="24sp"
        app:layout_constraintBaseline_toBaselineOf="@+id/editTextEnterArtist"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toLeftOf="@+id/editTextEnterArtist" />

    <TextView
        android:id="@+id/textViewRequestAlbum"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginLeft="16dp"
        android:layout_marginEnd="8dp"
        android:layout_marginRight="8dp"
        android:text="@string/album"
        android:textSize="24sp"
        app:layout_constraintBaseline_toBaselineOf="@+id/editTextEnterAlbum"
        app:layout_constraintHorizontal_bias="0.555"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toLeftOf="@+id/editTextEnterAlbum" />

    <Spinner
        android:id="@+id/spinnerGenre"
        android:layout_width="250dp"
        android:layout_height="wrap_content"
        android:layout_marginEnd="16dp"
        android:layout_marginRight="16dp"
        android:layout_marginTop="22dp"
        app:layout_constraintLeft_toRightOf="@+id/textViewRequestGenre"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/editTextEnterAlbum" />

    <EditText
        android:id="@+id/editTextEnterTitle"
        android:layout_width="250dp"
        android:layout_height="wrap_content"
        android:layout_marginRight="16dp"
        android:layout_marginEnd="16dp"
        android:layout_marginTop="24dp"
        android:ems="10"
        android:hint="@string/enter_the_song_title"
        android:inputType="textPersonName"
        android:textSize="18sp"
        app:layout_constraintLeft_toRightOf="@id/textViewRequestTitle"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <EditText
        android:id="@+id/editTextEnterArtist"
        android:layout_width="250dp"
        android:layout_height="wrap_content"
        android:layout_marginRight="16dp"
        android:layout_marginEnd="16dp"
        android:layout_marginTop="24dp"
        android:ems="10"
        android:hint="@string/enter_the_song_artist"
        android:inputType="textPersonName"
        app:layout_constraintLeft_toRightOf="@id/textViewRequestArtist"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/editTextEnterTitle" />

    <EditText
        android:id="@+id/editTextEnterAlbum"
        android:layout_width="250dp"
        android:layout_height="wrap_content"
        android:layout_marginRight="16dp"
        android:layout_marginEnd="16dp"
        android:layout_marginTop="24dp"
        android:ems="10"
        android:hint="@string/enter_the_song_album"
        android:inputType="textPersonName"
        app:layout_constraintLeft_toRightOf="@id/textViewRequestAlbum"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/editTextEnterArtist" />

    <TextView
        android:id="@+id/textViewRequestGenre"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/genre"
        android:textSize="24sp"
        android:layout_marginStart="16dp"
        android:layout_marginLeft="16dp"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toLeftOf="@+id/spinnerGenre"
        android:layout_marginEnd="8dp"
        android:layout_marginRight="8dp"
        android:layout_marginTop="32dp"
        app:layout_constraintTop_toBottomOf="@+id/textViewRequestAlbum"
        app:layout_constraintHorizontal_bias="0.516" />
</android.support.constraint.ConstraintLayout>
