<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:weightSum="1">

    <android.support.constraint.ConstraintLayout
        android:id="@+id/playlist_row"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_weight="0.11">

        <TextView
            android:id="@+id/title"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginEnd="8dp"
            android:layout_marginLeft="16dp"
            android:layout_marginRight="8dp"
            android:layout_marginStart="16dp"
            android:layout_marginTop="16dp"
            android:layout_weight="0.11"
            android:text="@string/song_title"
            android:textAppearance="@android:style/TextAppearance.Material.Headline"
            app:layout_constraintHorizontal_bias="0.0"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toLeftOf="@+id/votes"
            app:layout_constraintTop_toTopOf="parent" />

        <TextView
            android:id="@+id/artist"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginLeft="16dp"
            android:layout_marginRight="8dp"
            android:layout_marginTop="8dp"
            android:layout_weight="0.11"
            android:text="@string/song_artist"
            android:textAppearance="@android:style/TextAppearance.Material.Medium"
            app:layout_constraintHorizontal_bias="0.0"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toLeftOf="@+id/votes"
            app:layout_constraintTop_toBottomOf="@+id/title" />

        <TextView
            android:id="@+id/votes"
            android:layout_width="63dp"
            android:layout_height="60dp"
            android:layout_marginRight="8dp"
            android:layout_marginTop="16dp"
            android:text="@string/text_votes"
            android:textAppearance="@android:style/TextAppearance.Material.Medium"
            app:layout_constraintRight_toRightOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

    </android.support.constraint.ConstraintLayout>

</LinearLayout>